--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "ruslanram/tinkoff-invest-api",
+    "name": "dzhdmitry/tinkoff-invest-api",
     "description": "PHP client for Tinkoff Invest API",
     "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name": "Ruslan Ram",
+            "name": "Dmitry Dzhuleba",
             "email": "dzhdmitry@gmail.com"
         }
     ],
